# vulkan-rust-step-by-step

./: .gitignore  Cargo.toml  README.md  build.rs
images/: 3.webm  4.webm  5.webm
src/: app.rs  fragment.frag  main.rs  vertex.vert
src/vulkan/: baby.rs  buf.rs  frame.rs  image.rs  mod.rs  pipeline.rs  playground.rs  render.rs  swapchain.rs  texture.rs  uniform.rs
