[package]
name = "vulkan-rust-step-by-step"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = ">=0.35.0", default-features = false, features = ["linked", "debug"] }
winit = { version = "0.26.1", default-features = false, features = ["x11"] }
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", version = "0.2.3" }
nalgebra-glm = "0.3"
stb_image_rust = "2.27.2"

[build-dependencies]
shaderc = "0.8"
